Ajout de "they need your help !"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,4 +112,5 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="title_activity_grid">GridActivity</string>
+    <string name="theyneedyourhelp">They need your help !</string>
 </resources>
