--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,7 @@
     <string name="lorem">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam convallis viverra elit, sed ultrices lectus scelerisque eu. Pellentesque hendrerit elementum est, non sollicitudin augue pellentesque vel. Sed nec eros in diam bibendum blandit. Vestibulum diam augue, gravida vel commodo vitae, auctor ut erat. Nullam sit amet dignissim lorem. Morbi blandit pulvinar purus in hendrerit. Nulla imperdiet id lectus at pellentesque.
     </string>
+    <string name="this_user_hasnt_posted_yet">This user hasn\'t posted yet.</string>
+    <string name="this_user_doesnt_follow_anyone">Thius user doesn\'t follow anyone.</string>
+    <string name="this_user_hasnt_followers_yet">This user hasn\'t followers yet.</string>
 </resources>
