--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,4 +141,6 @@
     <string name="label_height">Height</string>
     <string name="label_weight">Weight</string>
     <string name="label_introduce_yourself">Introduce yourself in a few words...</string>
+    <string name="gender_male">Male</string>
+    <string name="gender_female">Female</string>
 </resources>
